# gst-zeromq

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  gst-zeromq-vars.sh
src/: Makefile.am
src/zeromq/: Makefile.am  gstzmq.h  gstzmqplugin.c  gstzmqsink.c  gstzmqsink.h  gstzmqsrc.c  gstzmqsrc.h
